--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.40",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
