--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
+    "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
@@ -47,7 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/mapbox-gl": "^2.7.3"
-  }
+  "devDependencies": {}
 }
