--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
