--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
     "redux-persist": "^6.0.0",
