--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.12.0",
+    "react-shimmer": "^3.2.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
@@ -53,6 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
