--- a/package.json
+++ b/package.json
@@ -5,25 +5,23 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^17.0.40",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
